--- a/NLU midterm 2022.ipynb
+++ b/NLU midterm 2022.ipynb
@@ -42,11 +42,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ca1124f9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# IMPORTS\n",
+    "import nltk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d73dc2d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# IMPORTING DATASETS\n",
+    "raw_test = nltk.load('./data/test.txt')\n",
+    "raw_train = nltk.load('./data/train.txt')\n",
+    "raw_val = nltk.load('./data/valid.txt')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "d570e1cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[\"n'gotty\",\n",
+       " 'east',\n",
+       " 'stated',\n",
+       " 'fortuna',\n",
+       " 'stock',\n",
+       " '4.00',\n",
+       " 'fix',\n",
+       " 'ribalta',\n",
+       " 'candidate',\n",
+       " 'sheffield',\n",
+       " 'energetic',\n",
+       " '120,000',\n",
+       " 'fringe',\n",
+       " 'belfast',\n",
+       " 'landmines',\n",
+       " 'child',\n",
+       " 'fitzrandolph',\n",
+       " '2011',\n",
+       " 'arminia',\n",
+       " 'five-match']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# TEST\n",
+    "test_sents = nltk.sent_tokenize(raw_test)\n",
+    "test_words = nltk.word_tokenize(raw_test)\n",
+    "test_vocab = set([ word.lower() for word in test_words])\n",
+    "# printing first 20 words in test Vocab\n",
+    "list(test_vocab)[:20]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d570e1cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['three-man',\n",
+       " 'east',\n",
+       " 'stated',\n",
+       " 'fortuna',\n",
+       " 'mid-september',\n",
+       " 'offending',\n",
+       " '11.45',\n",
+       " 'juppe',\n",
+       " 'minimium',\n",
+       " 'ronald',\n",
+       " '55.13',\n",
+       " 'landmines',\n",
+       " 'prostitute',\n",
+       " 'eurotunnel',\n",
+       " 'gulbuddin',\n",
+       " 'arminia',\n",
+       " 'installing',\n",
+       " 'flamurtari',\n",
+       " 'freeing',\n",
+       " 'walter']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# TRAIN\n",
+    "train_sents = nltk.sent_tokenize(raw_train)\n",
+    "train_words = nltk.word_tokenize(raw_train)\n",
+    "train_vocab = set([ word.lower() for word in train_words])\n",
+    "# printing first 20 words in train Vocab\n",
+    "list(train_vocab)[:20]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d570e1cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['stated',\n",
+       " 'east',\n",
+       " 'stock',\n",
+       " 'mid-september',\n",
+       " 'soymeal',\n",
+       " 'breach',\n",
+       " 'oates',\n",
+       " 'adam',\n",
+       " 'gulizade',\n",
+       " 'astrologer',\n",
+       " 'viciosa',\n",
+       " 'juppe',\n",
+       " 'candidate',\n",
+       " 'briskest',\n",
+       " 'appointed',\n",
+       " 'sheffield',\n",
+       " 'tipping',\n",
+       " 'ronald',\n",
+       " 'looking',\n",
+       " 'belfast']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# VAL\n",
+    "val_sents = nltk.sent_tokenize(raw_val)\n",
+    "val_words = nltk.word_tokenize(raw_val)\n",
+    "val_vocab = set([ word.lower() for word in val_words])\n",
+    "# printing first 20 words in val Vocab\n",
+    "list(val_vocab)[:20]\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -283,7 +434,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
