--- a/NLU midterm 2022.ipynb
+++ b/NLU midterm 2022.ipynb
@@ -41,6 +41,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "41abee67",
+   "metadata": {},
+   "source": [
+    "##### <p style='color:lightskyblue'> Q 1.1 Development </p>\n",
+    "<p style='color:lightskyblue'>To produce a Vocabulary and a Frequency Dictionary we will use the <code>nltk</code> and <code>spaCy</code> libraries.</p>\n",
+    "<p style='color:lightskyblue'>The former is used to load <a href=\"data/test.txt\">Test</a>, <a href=\"data/train.txt\">Train</a>, and <a href=\"data/valid.txt\">Validation</a> datasets.</p>\n",
+    "\n",
+    "<p style='color:lightskyblue'>\n",
+    "    For the <b>tokenization</b> task we use the <code>nltk.word_tokenize</code> method. This will allow us to get tokens (words) out of the raw text.\n",
+    "    However, in order to create a vocabulary, we iterate through tokens that have been set to lowercase, and add them to a <code>set</code> resulting in a list-like object but with unique values in it.\n",
+    "</p>\n",
+    "<p style='color:lightskyblue'>\n",
+    "    For the <b>frequency</b> task we use the <code>nltk.FreqDist</code> method. This will allow us to get a dictionary representing the frequency with which each word appears in the input text. Secondly, we display the <i>top-20</i> words in terms of frequency for each text file using the. To do this we use a modified version of the <code>nbest</code> function provided in the first lab session, available in the <a href=\"utils.py\">utils</a> file.\n",
+    "</p>\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "ca1124f9",
@@ -48,107 +66,148 @@
    "outputs": [],
    "source": [
     "# IMPORTS\n",
-    "import nltk"
+    "import nltk\n",
+    "import spacy\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "# Stopwords\n",
+    "from nltk.corpus import stopwords\n",
+    "from spacy.lang.en.stop_words import STOP_WORDS as SPACY_STOP_WORDS\n",
+    "\n",
+    "from utils import nbest"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "d73dc2d1",
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%capture\n",
     "# IMPORTING DATASETS\n",
     "raw_test = nltk.load('./data/test.txt')\n",
     "raw_train = nltk.load('./data/train.txt')\n",
-    "raw_val = nltk.load('./data/valid.txt')\n"
+    "raw_val = nltk.load('./data/valid.txt')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d02218bf",
+   "metadata": {},
+   "source": [
+    "<p style='color:lightskyblue'>Test</p>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "d570e1cd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[\"n'gotty\",\n",
-       " 'east',\n",
-       " 'stated',\n",
-       " 'fortuna',\n",
-       " 'stock',\n",
-       " '4.00',\n",
-       " 'fix',\n",
-       " 'ribalta',\n",
-       " 'candidate',\n",
-       " 'sheffield',\n",
-       " 'energetic',\n",
-       " '120,000',\n",
-       " 'fringe',\n",
-       " 'belfast',\n",
-       " 'landmines',\n",
-       " 'child',\n",
-       " 'fitzrandolph',\n",
-       " '2011',\n",
-       " 'arminia',\n",
-       " 'five-match']"
+       "['franco',\n",
+       " 'spots',\n",
+       " 'advance',\n",
+       " 'kong',\n",
+       " 'affecting',\n",
+       " 'try',\n",
+       " 'subject',\n",
+       " 'largest',\n",
+       " 'first-class',\n",
+       " 'north',\n",
+       " 'morale-boosting',\n",
+       " 'safe',\n",
+       " 'waited',\n",
+       " 'urska',\n",
+       " 'above',\n",
+       " 'iseas',\n",
+       " 'megan',\n",
+       " 'sergio',\n",
+       " 'hindu',\n",
+       " 'start']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# TEST\n",
-    "test_sents = nltk.sent_tokenize(raw_test)\n",
+    "# Tokenization\n",
     "test_words = nltk.word_tokenize(raw_test)\n",
-    "test_vocab = set([ word.lower() for word in test_words])\n",
+    "\n",
+    "test_vocabulary = set([ word.lower() for word in test_words])\n",
     "# printing first 20 words in test Vocab\n",
-    "list(test_vocab)[:20]\n"
+    "list(test_vocabulary)[:20]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
+   "id": "0ac428d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Frequency Dictionary from raw text\n",
+    "test_freq_dict = nltk.FreqDist(test_words)\n",
+    "\n",
+    "top_20_test = nbest(test_freq_dict, n=20)\n",
+    "top_20_test\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d02218bf",
+   "metadata": {},
+   "source": [
+    "<p style='color:lightskyblue'>Train</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "id": "d570e1cd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['three-man',\n",
-       " 'east',\n",
-       " 'stated',\n",
-       " 'fortuna',\n",
-       " 'mid-september',\n",
-       " 'offending',\n",
-       " '11.45',\n",
-       " 'juppe',\n",
-       " 'minimium',\n",
-       " 'ronald',\n",
-       " '55.13',\n",
-       " 'landmines',\n",
-       " 'prostitute',\n",
-       " 'eurotunnel',\n",
-       " 'gulbuddin',\n",
-       " 'arminia',\n",
-       " 'installing',\n",
-       " 'flamurtari',\n",
-       " 'freeing',\n",
-       " 'walter']"
+       "['employer',\n",
+       " 'tutsis',\n",
+       " '25-30',\n",
+       " 'reid',\n",
+       " 'peso',\n",
+       " 'uag',\n",
+       " 'col',\n",
+       " 'housing',\n",
+       " 'detain',\n",
+       " 'volgograd',\n",
+       " '369.00',\n",
+       " 'as-safir',\n",
+       " 'watkinson',\n",
+       " 'budge',\n",
+       " 'kapoor',\n",
+       " 'please',\n",
+       " 'jonathon',\n",
+       " 'sutjeska',\n",
+       " 'steptoe',\n",
+       " 'lasted']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# TRAIN\n",
-    "train_sents = nltk.sent_tokenize(raw_train)\n",
+    "\n",
+    "# Tokenization\n",
     "train_words = nltk.word_tokenize(raw_train)\n",
+    "\n",
     "train_vocab = set([ word.lower() for word in train_words])\n",
     "# printing first 20 words in train Vocab\n",
     "list(train_vocab)[:20]\n"
@@ -156,47 +215,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "id": "bad011ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Frequency Dictionary from raw text\n",
+    "train_freq_dict = nltk.FreqDist(train_words)\n",
+    "\n",
+    "top_20_train = nbest(train_freq_dict, n=20)\n",
+    "top_20_train\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d02218bf",
+   "metadata": {},
+   "source": [
+    "<p style='color:lightskyblue'>Validation</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d570e1cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# VALIDATION\n",
+    "\n",
+    "# Tokenization\n",
+    "val_sents = nltk.sent_tokenize(raw_val)\n",
+    "val_words = nltk.word_tokenize(raw_val)\n",
+    "\n",
+    "val_vocab = set([ word.lower() for word in val_words])\n",
+    "# printing first 20 words in val Vocab\n",
+    "list(val_vocab)[:20]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b52750c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Frequency Dictionary from raw text\n",
+    "val_freq_dict = nltk.FreqDist(val_words)\n",
+    "\n",
+    "top_20_val = nbest(val_freq_dict, n=20)\n",
+    "val_freq_dict\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "becdc520",
+   "metadata": {},
+   "source": [
+    "<p style=\"color:lightskyblue\">Here we repeat the same <b>tokenization</b> and <b>frequency-list</b> tasks using the <code>spaCy</code> library.</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d09e0588",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%capture\n",
+    "# USING SPACY\n",
+    "\n",
+    "# Tokenization using SpaCy\n",
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
+    "\n",
+    "test_words = nlp(raw_test)\n",
+    "test_vocab = set([ token.text for token in test_words ])\n",
+    "list(test_vocab)[:20]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "c3d3e08f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['stated',\n",
-       " 'east',\n",
-       " 'stock',\n",
-       " 'mid-september',\n",
-       " 'soymeal',\n",
-       " 'breach',\n",
-       " 'oates',\n",
-       " 'adam',\n",
-       " 'gulizade',\n",
-       " 'astrologer',\n",
-       " 'viciosa',\n",
-       " 'juppe',\n",
-       " 'candidate',\n",
-       " 'briskest',\n",
-       " 'appointed',\n",
-       " 'sheffield',\n",
-       " 'tipping',\n",
-       " 'ronald',\n",
-       " 'looking',\n",
-       " 'belfast']"
+       "821087"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# VAL\n",
-    "val_sents = nltk.sent_tokenize(raw_val)\n",
-    "val_words = nltk.word_tokenize(raw_val)\n",
-    "val_vocab = set([ word.lower() for word in val_words])\n",
-    "# printing first 20 words in val Vocab\n",
-    "list(val_vocab)[:20]\n"
+    "# Tokenization using SpaCy\n",
+    "train_words = nlp(raw_train)\n",
+    "train_vocab = set([ token.text for token in train_words])\n",
+    "list(train_vocab)[:20]"
    ]
   },
   {
@@ -211,12 +329,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4b630aa7",
+   "metadata": {},
+   "source": [
+    "##### <h style='color:lightskyblue'> Q 1.2 Development</h>\n",
+    "<p style='color:lightskyblue'>\n",
+    "    We consider as <strong>OOVs</strong> characters such as <em>punctuation</em> and <em>words containing numbers</em>.\n",
+    "    For convenience, both <code>spaCy</code> and <code>nltk</code> offer a list of stopwords which is displayed in the cell below.\n",
+    "</p>\n",
+    "<p style='color:lightskyblue'>\n",
+    "    In the cells above, we tried to use spacy's <code>.is_oov</code> attribute to tokens, but the result is ambiguos in the sense that words like <code>-DOCSTART-</code>, <code>-X-</code>, <code>NN</code>, etc are not meaningfull hance not desirable training inputs. However, such an attribute also removes meaningful words such as <code>SOCCER</code>, <code>JAPAN</code>, etc.\n",
+    "</p>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b660bcb8",
+   "id": "0cefb6ac",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%%capture\n",
+    "# Lists of Stopwords\n",
+    "NLTK_STOP_WORDS = set(stopwords.words('english'))\n",
+    "SPACY_STOP_WORDS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f5d928b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Word Overlap between Test and Train sets\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -232,11 +380,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "36e5c39e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Loading sentences\n",
+    "def load_as_sents(path):\n",
+    "    sents = []\n",
+    "    with open(path, 'r') as f:\n",
+    "        [sents.append(line.strip()) for line in f.readlines()]\n",
+    "    return sents\n",
+    "\n",
+    "test_sents = load_as_sents('./data/test.txt')\n",
+    "train_sents = load_as_sents('./data/train.txt')\n",
+    "dataset = train_sents + test_sents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "9be2c371",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.79"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Average sentence length computed in number of tokens \n",
+    "from statistics import mean\n",
+    "def tokens_in_sent(text_sents):\n",
+    "    '''\n",
+    "    Computes the average sentence length in terms of tokens per sentence of the given :param text_sents: .\n",
+    "    Params:\n",
+    "    - :param text_sents: list of sentences.\n",
+    "    Returns:\n",
+    "    - :sent_len: number of tokens per element of the :param text_sents: list. \n",
+    "    '''\n",
+    "    sent_len = []\n",
+    "    for sent in text_sents:\n",
+    "        sent_ = sent.split(' ')\n",
+    "        sent_len.append(len(sent_))\n",
+    "    return mean(sent_len)\n",
+    "\n",
+    "words_per_sent = tokens_in_sent(dataset)\n",
+    "round(words_per_sent,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15fa9e55",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The 50 most-common tokens\n",
+    "top_20_val = nbest(val_freq_dict, n=20)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "9b5ba6b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "269904"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Number of sentences\n",
+    "len(dataset)"
+   ]
   },
   {
    "cell_type": "markdown",
