--- a/NLU midterm 2022.ipynb
+++ b/NLU midterm 2022.ipynb
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "0cefb6ac",
    "metadata": {},
    "outputs": [],
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "36e5c39e",
    "metadata": {},
    "outputs": [],
@@ -394,7 +394,17 @@
     "\n",
     "test_sents = load_as_sents('./data/test.txt')\n",
     "train_sents = load_as_sents('./data/train.txt')\n",
-    "dataset = train_sents + test_sents"
+    "dataset_sents = train_sents + test_sents"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b25a8e1",
+   "metadata": {},
+   "source": [
+    "<p style=\"color:lightskyblue\">\n",
+    "    1) Finding the average sentence length in terms of tokens per sentence.\n",
+    "</p>"
    ]
   },
   {
@@ -431,19 +441,375 @@
     "        sent_len.append(len(sent_))\n",
     "    return mean(sent_len)\n",
     "\n",
-    "words_per_sent = tokens_in_sent(dataset)\n",
+    "words_per_sent = tokens_in_sent(dataset_sents)\n",
     "round(words_per_sent,2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "15fa9e55",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Frequency</th>\n",
+       "      <th>Word</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>242940</td>\n",
+       "      <td>O</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>82822</td>\n",
+       "      <td>I-NP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>70372</td>\n",
+       "      <td>B-NP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>42987</td>\n",
+       "      <td>NNP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>28830</td>\n",
+       "      <td>NN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>25666</td>\n",
+       "      <td>CD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>23138</td>\n",
+       "      <td>IN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>22822</td>\n",
+       "      <td>B-PP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>21814</td>\n",
+       "      <td>B-VP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>18671</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>18019</td>\n",
+       "      <td>.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>17855</td>\n",
+       "      <td>,</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>16252</td>\n",
+       "      <td>DT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>14224</td>\n",
+       "      <td>JJ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>12077</td>\n",
+       "      <td>NNS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>10731</td>\n",
+       "      <td>I-VP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>9992</td>\n",
+       "      <td>VBD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>8808</td>\n",
+       "      <td>B-LOC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>8788</td>\n",
+       "      <td>the</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>8217</td>\n",
+       "      <td>B-PER</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>7982</td>\n",
+       "      <td>B-ORG</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>7101</td>\n",
+       "      <td>(</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>7097</td>\n",
+       "      <td>)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>5684</td>\n",
+       "      <td>I-PER</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>5198</td>\n",
+       "      <td>\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>5185</td>\n",
+       "      <td>VB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>4971</td>\n",
+       "      <td>VBN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>4863</td>\n",
+       "      <td>RB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>4539</td>\n",
+       "      <td>I-ORG</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>4534</td>\n",
+       "      <td>of</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>4418</td>\n",
+       "      <td>CC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>4323</td>\n",
+       "      <td>TO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>4177</td>\n",
+       "      <td>to</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>4140</td>\n",
+       "      <td>B-MISC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>4120</td>\n",
+       "      <td>in</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>3860</td>\n",
+       "      <td>:</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>3768</td>\n",
+       "      <td>PRP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>3599</td>\n",
+       "      <td>a</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>3433</td>\n",
+       "      <td>and</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>3196</td>\n",
+       "      <td>B-ADVP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>3069</td>\n",
+       "      <td>VBG</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>2928</td>\n",
+       "      <td>VBZ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>2494</td>\n",
+       "      <td>on</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>2354</td>\n",
+       "      <td>-X-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>2244</td>\n",
+       "      <td>said</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>1900</td>\n",
+       "      <td>POS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>1866</td>\n",
+       "      <td>'s</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>1816</td>\n",
+       "      <td>PRP$</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>1767</td>\n",
+       "      <td>VBP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>1698</td>\n",
+       "      <td>for</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Frequency    Word\n",
+       "0      242940       O\n",
+       "1       82822    I-NP\n",
+       "2       70372    B-NP\n",
+       "3       42987     NNP\n",
+       "4       28830      NN\n",
+       "5       25666      CD\n",
+       "6       23138      IN\n",
+       "7       22822    B-PP\n",
+       "8       21814    B-VP\n",
+       "9       18671        \n",
+       "10      18019       .\n",
+       "11      17855       ,\n",
+       "12      16252      DT\n",
+       "13      14224      JJ\n",
+       "14      12077     NNS\n",
+       "15      10731    I-VP\n",
+       "16       9992     VBD\n",
+       "17       8808   B-LOC\n",
+       "18       8788     the\n",
+       "19       8217   B-PER\n",
+       "20       7982   B-ORG\n",
+       "21       7101       (\n",
+       "22       7097       )\n",
+       "23       5684   I-PER\n",
+       "24       5198       \"\n",
+       "25       5185      VB\n",
+       "26       4971     VBN\n",
+       "27       4863      RB\n",
+       "28       4539   I-ORG\n",
+       "29       4534      of\n",
+       "30       4418      CC\n",
+       "31       4323      TO\n",
+       "32       4177      to\n",
+       "33       4140  B-MISC\n",
+       "34       4120      in\n",
+       "35       3860       :\n",
+       "36       3768     PRP\n",
+       "37       3599       a\n",
+       "38       3433     and\n",
+       "39       3196  B-ADVP\n",
+       "40       3069     VBG\n",
+       "41       2928     VBZ\n",
+       "42       2494      on\n",
+       "43       2354     -X-\n",
+       "44       2244    said\n",
+       "45       1900     POS\n",
+       "46       1866      's\n",
+       "47       1816    PRP$\n",
+       "48       1767     VBP\n",
+       "49       1698     for"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# The 50 most-common tokens\n",
-    "top_20_val = nbest(val_freq_dict, n=20)\n"
+    "dataset_words = []\n",
+    "for sent in dataset_sents:\n",
+    "    for word in sent.split(' '):\n",
+    "        dataset_words.append(word)\n",
+    "\n",
+    "dataset_freq_dict = nltk.FreqDist(dataset_words)\n",
+    "\n",
+    "dict_freq = nbest(dataset_freq_dict, n=50)\n",
+    "dict_freq\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b25a8e1",
+   "metadata": {},
+   "source": [
+    "<p style=\"color:lightskyblue\">\n",
+    "    3) Number of sentences in the document.\n",
+    "</p>"
    ]
   },
   {
@@ -465,7 +831,7 @@
    ],
    "source": [
     "# Number of sentences\n",
-    "len(dataset)"
+    "len(dataset_sents)"
    ]
   },
   {
